k8s-manifests/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      automountServiceAccountToken: false
      containers:
      - name: auth-service
        image: kirillshakhov/auth-service:c97b8e3b
        ports:
        - containerPort: 9992
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "400m"
            memory: "800Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  ports:
  - port: 9992
    targetPort: 9992
  selector:
    app: auth-service
