k8s-manifests/mediafiles-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediafiles-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediafiles-service
  template:
    metadata:
      labels:
        app: mediafiles-service
    spec:
      automountServiceAccountToken: false
      containers:
      - name: mediafiles-service
        image: kirillshakhov/mediafiles-service:c9ff425d
        ports:
        - containerPort: 9993
        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"
          limits:
            cpu: "200m"
            memory: "600Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mediafiles-service
spec:
  ports:
  - port: 9993
    targetPort: 9993
  selector:
    app: mediafiles-service
